--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "@inkdown/book",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "@inkdown/client": "workspace:^",
     "@prisma/client": "5.15.0",
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
@@ -41,8 +42,6 @@
     "@types/mdast": "^4.0.3",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prisma": "^6.1.0",
