--- a/packages/book/tsconfig.json
+++ b/packages/book/tsconfig.json
@@ -5,14 +5,15 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
-, "app/parser/worker.js"  ],
+    "**/.client/**/*.tsx" 
+  ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["@remix-run/node", "vite/client"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
+    "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
@@ -26,7 +27,6 @@
       "~/*": ["./app/*"]
     },
 
-    // Vite takes care of building everything, not tsc.
-    "noEmit": true
+    "noEmit": false
   }
 }
