--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,9 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
+    "js-sha1": "^0.7.0",
+    "nanoid": "^5.0.9",
+    "path-browserify": "^1.0.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "@types/mdast": "^4.0.3",
+    "@types/path-browserify": "^1.0.3",
     "terser-webpack-plugin": "^5.3.10",
     "unified": "^11.0.4",
     "webpack": "^5.91.0"
