--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -13,5 +13,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "."
-  }
+  },
+  "references": [{ "path": "../book" }]
 }
