--- a/packages/book/package.json
+++ b/packages/book/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@iconify/react": "^4.1.1",
     "@inkdown/client": "workspace:^",
     "@prisma/client": "5.15.0",
@@ -17,6 +18,8 @@
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
     "antd": "^5.16.2",
+    "dayjs": "^1.11.13",
+    "dexie": "^4.0.10",
     "diacritics": "^1.3.0",
     "isbot": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -31,7 +34,7 @@
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
-    "shiki": "^1.22.1",
+    "shiki": "^1.24.4",
     "unified": "^11.0.4",
     "zod": "^3.24.1"
   },
