--- a/packages/book/package.json
+++ b/packages/book/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
+    "@types/diacritics": "^1.3.3",
     "@types/katex": "^0.16.7",
     "@types/mdast": "^4.0.3",
     "@types/react": "^18.2.20",
