--- a/packages/book/package.json
+++ b/packages/book/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prisma": "^6.1.0",
+    "sass": "^1.83.0",
     "tailwindcss": "^3.4.4",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.1.6",
