--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
+    "diacritics": "^1.3.0",
     "js-sha1": "^0.7.0",
     "nanoid": "^5.0.9",
     "path-browserify": "^1.0.1",
@@ -17,9 +18,11 @@
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
+    "slate": "^0.112.0",
     "unified": "^11.0.4"
   },
   "devDependencies": {
+    "@types/diacritics": "^1.3.3",
     "@types/mdast": "^4.0.3",
     "@types/path-browserify": "^1.0.3",
     "terser-webpack-plugin": "^5.3.10",
