--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "dependencies": {
     "@trpc/client": "11.0.0-rc.666",
     "@trpc/server": "11.0.0-rc.666"
+  },
+  "devDependencies": {
+    "vite": "^5.1.0",
+    "vite-plugin-dts": "^4.4.0"
   }
 }
