--- a/packages/book/package.json
+++ b/packages/book/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.13",
     "dexie": "^4.0.10",
     "diacritics": "^1.3.0",
+    "is-hotkey": "^0.2.0",
     "isbot": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.9",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
     "@types/diacritics": "^1.3.3",
+    "@types/is-hotkey": "^0.1.10",
     "@types/katex": "^0.16.7",
     "@types/mdast": "^4.0.3",
     "@types/react": "^18.2.20",
