feat: Add permission verification to http interface

--- a/packages/book/tsconfig.json
+++ b/packages/book/tsconfig.json
@@ -5,11 +5,12 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx" 
+    "**/.client/**/*.tsx" ,
+    "**/*.mjs"
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@remix-run/node", "vite/client"],
+    "types": ["@remix-run/node", "vite/client", "node"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -26,7 +27,6 @@
     "paths": {
       "~/*": ["./app/*"]
     },
-
     "noEmit": false
   }
 }
