--- a/packages/book/package.json
+++ b/packages/book/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "node scripts/startDetection.mjs && remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "diacritics": "^1.3.0",
     "is-hotkey": "^0.2.0",
     "isbot": "^4.1.0",
+    "js-sha1": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.9",
     "mermaid": "^10.9.0",
@@ -43,11 +44,14 @@
     "@remix-run/dev": "^2.15.1",
     "@types/diacritics": "^1.3.3",
     "@types/is-hotkey": "^0.1.10",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/katex": "^0.16.7",
     "@types/mdast": "^4.0.3",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.7",
     "postcss": "^8.4.38",
     "prisma": "^6.1.0",
     "sass": "^1.83.0",
