--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@inkdown/client",
-  "private": true,
-  "sideEffects": false,
   "type": "module",
+  "version": "0.1.0",
+  "main": "dist/main.es.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build:remark": "node src/parser/worker/compiler.js"
-  },
-  "exports": {
-    ".": "./src/index.ts"
   },
   "dependencies": {
     "diacritics": "^1.3.0",
