--- a/packages/book/package.json
+++ b/packages/book/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@iconify/react": "^4.1.1",
-    "@inkdown/client": "workspace:^",
+    "@inkdown/client": "0.1.1",
     "@prisma/client": "5.15.0",
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
