--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,7 +2,7 @@
   "name": "@inkdown/client",
   "type": "module",
   "version": "0.1.1",
-  "main": "dist/main.es.js",
+  "module": "dist/main.es.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build:remark": "node src/parser/worker/compiler.js"
