--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@inkdown/client",
   "type": "module",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "module": "dist/main.es.js",
+  "main": "dist/main.umd.js",
+  "exports": {
+    ".": "./dist/main.es.js"
+  },
   "types": "dist/index.d.ts",
   "scripts": {
     "build:remark": "node src/parser/worker/compiler.js"
