refactor: github release

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -3,12 +3,13 @@ name: Package
 on:
   push:
     tags: v*
-    branches:
-      - main
+    # branches:
+    #   - build
   workflow_dispatch:
 
 jobs:
   build:
+    # runs-on: macos-latest
     strategy:
       matrix:
         include:
@@ -25,6 +26,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        # with:
+        #   ref: build
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -39,16 +43,9 @@ jobs:
         run: |
           pnpm install
 
-      - name: Install Book
-        run: |
-          pnpm install
-        working-directory: ./packages/book
-
       - name: Build
         run: |
           npm run release
-          tar czvf inkdown-book.tar.gz dist
-        working-directory: ./packages/book
 
       - name: GH Release
         uses: softprops/action-gh-release@v1
@@ -58,5 +55,5 @@ jobs:
           draft: ''
           prerelease: true
           files: |
-            packages/book/inkdown-book.tar.gz
+            inkdown-book.tar.gz
             packages/book/scripts/install.sh
