--- a/packages/book/scripts/package.json
+++ b/packages/book/scripts/package.json
@@ -2,6 +2,7 @@
   "name": "@inkdown/book",
   "private": true,
   "sideEffects": false,
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "start": "node scripts/startDetection.mjs && remix-serve ./build/server/index.js"
