--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -55,5 +55,5 @@ jobs:
           draft: ''
           prerelease: true
           files: |
-            inkdown-book.tar.gz
+            packages/book/inkdown-book.tar.gz
             packages/book/scripts/install.sh
