--- a/packages/book/package.json
+++ b/packages/book/package.json
@@ -19,7 +19,9 @@
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
-    "antd": "^5.16.2",
+    "antd": "^5.23.1",
+    "axios": "^1.7.9",
+    "compare-versions": "^6.1.1",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.10",
     "diacritics": "^1.3.0",
