--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@inkdown/client",
   "type": "module",
-  "version": "0.1.3",
-  "module": "dist/main.es.js",
-  "main": "dist/main.umd.js",
+  "version": "0.1.4",
   "exports": {
-    ".": "./dist/main.es.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/main.es.js",
+      "require": "./dist/main.umd.js"
+    }
   },
   "types": "dist/index.d.ts",
   "scripts": {
